--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiProductoView.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="885.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiProductoViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="885.0" style="-fx-background-color: white;" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiProductoViewController">
    <children>
       <TabPane layoutX="6.0" layoutY="6.0" prefHeight="566.0" prefWidth="856.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -43,15 +43,18 @@
                         <Label layoutX="46.0" layoutY="141.0" text="Código:" />
                         <Label layoutX="23.0" layoutY="333.0" />
                         <Label layoutX="500.0" layoutY="94.0" text="Tipo de producto:" />
-                        <TextField fx:id="txtNombreProducto" layoutX="138.0" layoutY="91.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el nombre del producto" />
-                        <TextField fx:id="txtCodigoProducto" layoutX="138.0" layoutY="137.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el código del producto" />
-                        <TextField fx:id="txtValor" layoutX="138.0" layoutY="195.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el valor inicial" />
+                        <TextField fx:id="txtNombreProducto" layoutX="138.0" layoutY="91.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el nombre del producto" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle.css" />
+                        <TextField fx:id="txtCodigoProducto" layoutX="138.0" layoutY="137.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el código del producto" styleClass="text-field-custom" />
+                        <TextField fx:id="txtValor" layoutX="138.0" layoutY="195.0" prefHeight="25.0" prefWidth="270.0" promptText="Ingrese el valor inicial" styleClass="text-field-custom" />
                         <TextArea fx:id="txtDescripcion" layoutX="138.0" layoutY="263.0" prefHeight="121.0" prefWidth="273.0" />
                         <Label layoutX="500.0" layoutY="141.0" text="Imagen:" />
                         <ComboBox fx:id="comboBoxTipoProducto" layoutX="629.0" layoutY="91.0" prefHeight="25.0" prefWidth="212.0" promptText="Seleccione el tipo de producto" />
                         <Button fx:id="btnAniadirImagen" layoutX="629.0" layoutY="137.0" mnemonicParsing="false" onAction="#aniadirImagenProducto" prefHeight="25.0" prefWidth="211.0" style="-fx-background-color: #0697AE;" text="Añadir imagen" textFill="WHITE" />
                         <Label layoutX="500.0" layoutY="199.0" text="Previsualización" />
-                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="582.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imageViewPrevisualizacion" fitHeight="186.0" fitWidth="257.0" layoutX="582.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/ImageStock.png" />
+                           </image></ImageView>
                         <Button fx:id="btnAniadirProducto" layoutX="349.0" layoutY="453.0" mnemonicParsing="false" onAction="#aniadirProducto" onKeyPressed="#aniadirProductoTecla" prefHeight="44.0" prefWidth="118.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Añadir" textFill="WHITE">
                            <font>
                               <Font size="19.0" />
@@ -96,11 +99,11 @@
                               <TableColumn fx:id="columnAnunciado" prefWidth="156.0" text="¿Está anunciado?" />
                           </columns>
                         </TableView>
-                        <Button fx:id="btnEliminarProducto" layoutX="266.0" layoutY="478.0" mnemonicParsing="false" onAction="#eliminarProducto" onKeyPressed="#eliminarProductoTecla" prefHeight="32.0" prefWidth="128.0" style="-fx-background-color: red;" text="Eliminar producto" textFill="WHITE">
+                        <Button fx:id="btnEliminarProducto" layoutX="257.0" layoutY="478.0" mnemonicParsing="false" onAction="#eliminarProducto" onKeyPressed="#eliminarProductoTecla" prefHeight="38.0" prefWidth="137.0" style="-fx-background-color: red;" text="Eliminar producto" textFill="WHITE">
                            <font>
                               <Font size="13.0" />
                            </font></Button>
-                        <Button fx:id="btnActualizarProducto1" layoutX="435.0" layoutY="476.0" mnemonicParsing="false" onAction="#actualizarProductoInfo" prefHeight="37.0" prefWidth="117.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697aec2" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="435.0" AnchorPane.rightAnchor="333.0" AnchorPane.topAnchor="476.0">
+                        <Button fx:id="btnActualizarProducto1" layoutX="435.0" layoutY="476.0" mnemonicParsing="false" onAction="#actualizarProductoInfo" prefHeight="44.0" prefWidth="121.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697aec2" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="435.0" AnchorPane.rightAnchor="329.0" AnchorPane.topAnchor="476.0">
                            <font>
                               <Font size="19.0" />
                            </font>
