--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiCuentaView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiCuentaView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="885.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiCuentaViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="885.0" style="-fx-background-color: white;" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiCuentaViewController">
    <children>
       <Pane prefHeight="68.0" prefWidth="885.0" style="-fx-background-color: #0697AE;" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="113.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
@@ -42,13 +42,13 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="txtNombre" layoutX="579.0" layoutY="173.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField fx:id="txtApellidos" layoutX="579.0" layoutY="208.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField fx:id="txtEdad" layoutX="579.0" layoutY="244.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField fx:id="txtIdentificacion" layoutX="579.0" layoutY="279.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField fx:id="txtUsuario" layoutX="579.0" layoutY="315.0" prefHeight="25.0" prefWidth="230.0" />
-      <TextField fx:id="txtCorreo" layoutX="579.0" layoutY="355.0" prefHeight="25.0" prefWidth="230.0" />
-      <PasswordField fx:id="txtContrasenia" layoutX="579.0" layoutY="397.0" prefHeight="25.0" prefWidth="230.0" />
+      <TextField fx:id="txtNombre" layoutX="581.0" layoutY="158.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <TextField fx:id="txtApellidos" layoutX="581.0" layoutY="193.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <TextField fx:id="txtEdad" layoutX="581.0" layoutY="229.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <TextField fx:id="txtIdentificacion" layoutX="581.0" layoutY="264.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <TextField fx:id="txtUsuario" layoutX="581.0" layoutY="300.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <TextField fx:id="txtCorreo" layoutX="581.0" layoutY="340.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
+      <PasswordField fx:id="txtContrasenia" layoutX="581.0" layoutY="382.0" prefHeight="25.0" prefWidth="230.0" styleClass="text-field-custom" />
       <Button fx:id="btnActualizarInformacion" layoutX="208.0" layoutY="489.0" mnemonicParsing="false" onAction="#actualizarUsuario" onKeyPressed="#actualizarUsuarioTecla" prefHeight="33.0" prefWidth="150.0" style="-fx-background-color: #0697AE;" text="Actualizar informacion" textFill="WHITE">
          <font>
             <Font size="13.0" />
