--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiPujaView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiPujaView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiPujaViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" stylesheets="@../styles/TxtStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiPujaViewController">
    <children>
       <Pane prefHeight="86.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
          <children>
@@ -20,7 +20,7 @@
       </Pane>
       <SplitPane dividerPositions="0.5" layoutY="86.0" orientation="VERTICAL" prefHeight="522.0" prefWidth="885.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="236.0" prefWidth="874.0" style="-fx-background-color: white;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="236.0" prefWidth="874.0" style="-fx-background-color: white;" stylesheets="@../styles/TxtStyle.css">
                <children>
                   <Label layoutX="14.0" layoutY="6.0" text="Nueva puja información">
                      <font>
@@ -33,12 +33,13 @@
                   <Label layoutX="24.0" layoutY="36.0" text="Nombre usuario" />
                   <Label layoutX="519.0" layoutY="36.0" text="Anuncio" />
                   <Separator layoutX="14.0" layoutY="22.0" prefHeight="0.0" prefWidth="826.0" />
-                  <TextField fx:id="txtNombreComprador" layoutX="150.0" layoutY="32.0" prefHeight="25.0" prefWidth="258.0" />
-                  <TextField fx:id="txtCodigo" layoutX="150.0" layoutY="62.0" prefHeight="25.0" prefWidth="258.0" />
-                  <TextField fx:id="txtValor" layoutX="150.0" layoutY="137.0" prefHeight="25.0" prefWidth="258.0" />
-                  <DatePicker fx:id="datePickerFecha" layoutX="150.0" layoutY="103.0" prefHeight="25.0" prefWidth="258.0" />
+                  <TextField fx:id="txtNombreComprador" layoutX="150.0" layoutY="32.0" prefHeight="25.0" prefWidth="258.0" styleClass="text-field-custom" />
+                  <TextField fx:id="txtCodigo" layoutX="150.0" layoutY="62.0" prefHeight="25.0" prefWidth="258.0" styleClass="text-field-custom" />
+                  <TextField fx:id="txtValor" layoutX="150.0" layoutY="137.0" prefHeight="25.0" prefWidth="258.0" styleClass="text-field-custom" />
+                  <DatePicker fx:id="datePickerFecha" layoutX="150.0" layoutY="103.0" prefHeight="25.0" prefWidth="258.0" style="-fx-border-color: #0697AE;" />
                   <TextArea fx:id="txtAnuncio" layoutX="598.0" layoutY="37.0" prefHeight="140.0" prefWidth="236.0" />
-                  <Button fx:id="btnAgregarPuja" layoutX="408.0" layoutY="212.0" mnemonicParsing="false" onAction="#agregarPuja" onKeyPressed="#agregarPujaTecla" style="-fx-background-color: #0697AE;" text="Realizar puja" textFill="WHITE" />
+                  <Button fx:id="btnAgregarPuja" layoutX="477.0" layoutY="218.0" mnemonicParsing="false" onAction="#agregarPuja" onKeyPressed="#agregarPujaTecla" style="-fx-background-color: #0697AE;" text="Realizar puja" textFill="WHITE" />
+                  <Button fx:id="btnNuevo" layoutX="335.0" layoutY="218.0" mnemonicParsing="false" onAction="#limpiarCampos" style="-fx-background-color: #0697AE;" text="Nuevo" textFill="WHITE" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="273.0" prefWidth="883.0" style="-fx-background-color: white;">
