--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/CompradorView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/CompradorView.fxml
@@ -15,24 +15,24 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.CompradorViewController">
+<AnchorPane fx:id="anchorPaneContenedor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.CompradorViewController">
    <children>
-      <TabPane layoutX="14.0" layoutY="22.0" prefHeight="614.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane fx:id="tabPaneCompador" layoutX="14.0" layoutY="22.0" prefHeight="614.0" prefWidth="803.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
             <Tab fx:id="tabMicuenta" text="Mi cuenta">
                <content>
                   <fx:include source="MiCuentaView.fxml" />
                </content>
             </Tab>
-            <Tab fx:id="tabMisPujas" text="Mis pujas">
-               <content>
-                  <fx:include source="MiPujaView.fxml" />
-               </content>
-            </Tab>
             <Tab fx:id="tabAnunciosDisponibles" text="Anuncios disponibles">
               <content>
                 <fx:include source="SubastaView.fxml" />
               </content>
+            </Tab>
+            <Tab fx:id="tabMisPujas" text="Mis pujas">
+               <content>
+                  <fx:include source="MiPujaView.fxml" />
+               </content>
             </Tab>
          </tabs>
       </TabPane>
